# conjugAIs

./: .gitignore  README.md
.devcontainer/: .env  compose.yaml  devcontainer.json  on-start-container.sh  on-start-host.sh  pre-commit
conjugais_core/: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
conjugais_core/conjugais_core/cli/: __init__.py
conjugais_core/conjugais_core/core/: __init__.py  clause_template_model.py  shared_modes.py
conjugais_core/conjugais_core/spanish/: basic_clause_templates.py  basic_components.py  definitions.py  modes.py
conjugais_core/conjugais_core/spanish/clause_templates/: all_simple_tenses.py
conjugais_core/conjugais_core/spanish/shared_options/: functions.py  noun.py  person.py  tense.py
conjugais_core/tests/: test_import.py
conjugais_core/tests/test_cli/: test_cli.py
conjugais_core/tests/test_spanish/: test_basic_clause_templates.py  test_basic_clause_templates.test_simple_tenses.approved.json
conjugais_core/tests/test_spanish/test_clause_templates/: test_all_simple_tenses.py  test_all_simple_tenses.test_all_simple_tenses.approved.json  test_all_simple_tenses.test_all_simple_tenses.received.json
conjugais_tools/: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
conjugais_tools/conjugais_tools/cli/: __init__.py
conjugais_tools/tests/: test_import.py
conjugais_tools/tests/test_cli/: test_cli.py
